JEI: Basic Config Changes

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -7,7 +7,7 @@ world-78688046 {
     B:bookmarkOverlayEnabled=true
 
     # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
+    B:cheatItemsEnabled=true
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
