--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -16,7 +16,7 @@ advanced {
     # Choose if JEI should give ingredients direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
     # [Default: mouse_pickup]
     # [Valid: [inventory, mouse_pickup]]
-    S:giveMode=MOUSE_PICKUP
+    S:giveMode=inventory
 
     # The maximum width of the ingredient list. [range: 4 ~ 100, default: 100]
     I:maxColumns=100
@@ -42,12 +42,12 @@ search {
     # Search mode for Colors (prefix: ^)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:colorSearchMode=DISABLED
+    S:colorSearchMode=require_prefix
 
     # Search mode for Creative Tab Names (prefix: %)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:creativeTabSearchMode=DISABLED
+    S:creativeTabSearchMode=require_prefix
 
     # Search mode for Mod Names (prefix: @)
     # [Default: require_prefix]
@@ -57,17 +57,17 @@ search {
     # Search mode for Ore Dictionary Names (prefix: $)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:oreDictSearchMode=DISABLED
+    S:oreDictSearchMode=require_prefix
 
     # Search mode for resources ids (prefix: &)
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:resourceIdSearchMode=DISABLED
+    S:resourceIdSearchMode=require_prefix
 
     # Search mode for Tooltips (prefix: #)
     # [Default: enabled]
     # [Valid: [enabled, require_prefix, disabled]]
-    S:tooltipSearchMode=ENABLED
+    S:tooltipSearchMode=require_prefix
 }
 
 
