--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -2,7 +2,7 @@
 
 afk {
     # Enables afk timer.
-    B:enabled=true
+    B:enabled=false
 
     # Enables afk timer in singleplayer.
     B:enabled_singleplayer=false
@@ -77,20 +77,19 @@ login {
     B:enable_global_badges=true
 
     # Enables message of the day.
-    B:enable_motd=false
+    B:enable_motd=true
 
     # Enables starting items.
     B:enable_starting_items=false
 
     # Message of the day. This will be displayed when player joins the server.
     S:motd <
-        "Hello player!"
+        "Welcome to Out of Reach!"
      >
 
     # Items to give player when he first joins the server.
     # Format: '{id:"ID",Count:X,Damage:X,tag:{}}', Use /print_item to get NBT of item in your hand.
     S:starting_items <
-        {id:"minecraft:stone_sword",Count:1,Damage:1,tag:{display:{Name:"Epic Stone Sword"}}}
      >
 }
 
@@ -139,7 +138,7 @@ world {
     # TRUE
     # FALSE
     # DEFAULT
-    S:enable_pvp=TRUE
+    S:enable_pvp=FALSE
 
     # Locked time in ticks in spawn dimension.
     # -1 - Disabled
