JMap: Config Changes & Removed Junk

--- a/journeymap/config/5.5/journeymap.fullmap.config
+++ b/journeymap/config/5.5/journeymap.fullmap.config
@@ -2,25 +2,25 @@
 // To use in all worlds, place here: journeymap\config\5.5\
 // For more information, go to: http://journeymap.info/Options_Manager
 {
-  "showKeys": "true",
+  "showKeys": "false",
   "playerDisplay": "SmallDots",
-  "showPlayerHeading": "true",
+  "showPlayerHeading": "false",
   "mobDisplay": "SmallDots",
-  "showMobHeading": "true",
-  "showMobs": "true",
-  "showAnimals": "true",
-  "showVillagers": "true",
+  "showMobHeading": "false",
+  "showMobs": "false",
+  "showAnimals": "false",
+  "showVillagers": "false",
   "showPets": "true",
-  "showPlayers": "true",
+  "showPlayers": "false",
   "fontScale": "1",
   "showWaypointLabels": "true",
   "locationFormatVerbose": "true",
-  "locationFormat": "xzyv",
+  "locationFormat": "xyz",
   "showWaypoints": "true",
   "showSelf": "true",
-  "showGrid": "true",
-  "showCaves": "true",
-  "showEntityNames": "true",
+  "showGrid": "false",
+  "showCaves": "false",
+  "showEntityNames": "false",
   "preferredMapType": "day",
   "zoomLevel": "0",
   "configVersion": "5.5.6"
