--- a/journeymap/config/5.5/journeymap.minimap.config
+++ b/journeymap/config/5.5/journeymap.minimap.config
@@ -5,14 +5,14 @@
   "gameTimeRealFormat": "HH:mm:ss",
   "systemTimeRealFormat": "HH:mm:ss",
   "enabled": "true",
-  "shape": "Circle",
+  "shape": "Square",
   "position": "TopRight",
   "showDayNight": "true",
   "info1Label": "Blank",
-  "info2Label": "GameTime",
-  "info3Label": "Location",
-  "info4Label": "Biome",
-  "sizePercent": "30",
+  "info2Label": "Blank",
+  "info3Label": "Blank",
+  "info4Label": "Location",
+  "sizePercent": "26",
   "frameAlpha": "100",
   "terrainAlpha": "100",
   "orientation": "North",
@@ -22,23 +22,23 @@
   "reticleOrientation": "Compass",
   "active": true,
   "playerDisplay": "SmallDots",
-  "showPlayerHeading": "true",
+  "showPlayerHeading": "false",
   "mobDisplay": "SmallDots",
-  "showMobHeading": "true",
-  "showMobs": "true",
-  "showAnimals": "true",
-  "showVillagers": "true",
+  "showMobHeading": "false",
+  "showMobs": "false",
+  "showAnimals": "false",
+  "showVillagers": "false",
   "showPets": "true",
-  "showPlayers": "true",
+  "showPlayers": "false",
   "fontScale": "1",
   "showWaypointLabels": "true",
   "locationFormatVerbose": "true",
-  "locationFormat": "xzyv",
+  "locationFormat": "xyz",
   "showWaypoints": "true",
   "showSelf": "true",
   "showGrid": "true",
-  "showCaves": "true",
-  "showEntityNames": "true",
+  "showCaves": "false",
+  "showEntityNames": "false",
   "preferredMapType": "day",
   "zoomLevel": "0",
   "configVersion": "5.5.6"
