--- a/journeymap/config/5.5/journeymap.waypoint.config
+++ b/journeymap/config/5.5/journeymap.waypoint.config
@@ -5,13 +5,13 @@
   "managerEnabled": "true",
   "beaconEnabled": "true",
   "showTexture": "true",
-  "showStaticBeam": "true",
-  "showRotatingBeam": "true",
+  "showStaticBeam": "false",
+  "showRotatingBeam": "false",
   "showName": "true",
   "showDistance": "true",
   "autoHideLabel": "true",
   "boldLabel": "false",
-  "fontScale": "2",
+  "fontScale": "1",
   "textureSmall": "true",
   "maxDistance": "0",
   "minDistance": "4",
