--- a/journeymap/config/5.5/journeymap.webmap.config
+++ b/journeymap/config/5.5/journeymap.webmap.config
@@ -8,8 +8,8 @@
   "showWaypoints": "true",
   "showSelf": "true",
   "showGrid": "true",
-  "showCaves": "true",
-  "showEntityNames": "true",
+  "showCaves": "false",
+  "showEntityNames": "false",
   "preferredMapType": "day",
   "zoomLevel": "0",
   "configVersion": "5.5.6"
