--- a/journeymap/config/5.5/journeymap.core.config
+++ b/journeymap/config/5.5/journeymap.core.config
@@ -13,7 +13,7 @@
   "checkUpdates": "true",
   "recordCacheStats": "false",
   "browserPoll": "2000",
-  "themeName": "OceanMonument",
+  "themeName": "Purist",
   "caveIgnoreGlass": "true",
   "mapBathymetry": "false",
   "mapTopography": "true",
@@ -32,7 +32,7 @@
   "renderDelay": "2",
   "revealShape": "Circle",
   "alwaysMapCaves": "false",
-  "alwaysMapSurface": "false",
+  "alwaysMapSurface": "true",
   "tileHighDisplayQuality": "true",
   "maxAnimalsData": "32",
   "maxMobsData": "32",
@@ -45,8 +45,8 @@
   "mappingEnabled": "true",
   "renderOverlayEventTypeName": "ALL",
   "renderOverlayPreEvent": "true",
-  "optionsManagerViewed": null,
-  "splashViewed": null,
+  "optionsManagerViewed": "5.5.6",
+  "splashViewed": "5.5.6",
   "gridSpecs": {
     "day": "Squares,#808080,0.5,-1,-1",
     "night": "Squares,#8080ff,0.3,-1,-1",
