--- a/journeymap/config/5.5/journeymap.minimap2.config
+++ b/journeymap/config/5.5/journeymap.minimap2.config
@@ -4,7 +4,7 @@
 {
   "gameTimeRealFormat": "HH:mm:ss",
   "systemTimeRealFormat": "HH:mm:ss",
-  "enabled": "true",
+  "enabled": "false",
   "shape": "Rectangle",
   "position": "TopRight",
   "showDayNight": "true",
