JMap: Removed Announced / Update Check

--- a/journeymap/config/5.5/journeymap.core.config
+++ b/journeymap/config/5.5/journeymap.core.config
@@ -9,8 +9,8 @@
   "cachePlayerData": "1000",
   "cachePlayersData": "2000",
   "cacheVillagersData": "2200",
-  "announceMod": "true",
-  "checkUpdates": "true",
+  "announceMod": "false",
+  "checkUpdates": "false",
   "recordCacheStats": "false",
   "browserPoll": "2000",
   "themeName": "Purist",
@@ -38,7 +38,7 @@
   "maxMobsData": "32",
   "maxPlayersData": "32",
   "maxVillagersData": "32",
-  "hideSneakingEntities": "true",
+  "hideSneakingEntities": "false",
   "radarLateralDistance": "64",
   "radarVerticalDistance": "16",
   "tileRenderType": "1",
