TechReborn: Updated Configs

--- a/config/teamreborn/techreborn/compat.cfg
+++ b/config/teamreborn/techreborn/compat.cfg
@@ -28,6 +28,9 @@ jei {
 
 
 modules {
+    # Should the compat module 'CompatOpenComputers' be loaded
+    B:CompatOpenComputers=true
+
     # Should the compat module 'CraftTweakerCompat' be loaded
     B:CraftTweakerCompat=true
 
