TechReborn: Config Updated

--- a/config/teamreborn/techreborn/compat.cfg
+++ b/config/teamreborn/techreborn/compat.cfg
@@ -1,5 +1,14 @@
 # Configuration file
 
+appliedenergistics2 {
+    # Enable grinder recipes related to Applied Energistics 2 quartz [Default=true]
+    B:EnableQuartzGrinderRecipes=true
+
+    # Enable industrial grinder recipes related to Applied Energistics 2 quartz [Default=true]
+    B:EnableQuartzIndustrialGrinderRecipes=true
+}
+
+
 forestry {
     # Enable distillation tower recipes envolving Forestry fuels [Default=true]
     B:EnableDistillationTowerForestryRecipes=true
@@ -28,6 +37,9 @@ jei {
 
 
 modules {
+    # Should the compat module 'AppliedEnergisticsCompat' be loaded
+    B:AppliedEnergisticsCompat=true
+
     # Should the compat module 'CompatOpenComputers' be loaded
     B:CompatOpenComputers=true
 
