SGCraft: Disabled World Generation Including Ores That Bypassed TFC

--- a/config/sgcraft.cfg
+++ b/config/sgcraft.cfg
@@ -44,25 +44,25 @@ gate-access {
 
 
 generaton {
-    B:igloo_addon=true
+    B:igloo_addon=false
     I:igloo_addon_chance=25
     I:igloo_chevron_upgrade_chance=25
-    B:igloo_spawn_tokra=true
+    B:igloo_spawn_tokra=false
     I:igloo_zpm_chest_chance=15
-    B:jungle_addon=true
+    B:jungle_addon=false
     I:jungle_addon_chance=25
     I:jungle_chevron_upgrade_chance=25
-    B:jungle_spawn_tokra=true
+    B:jungle_spawn_tokra=false
     I:jungle_zpm_chest_chance=15
-    B:pyramid_addon=true
+    B:pyramid_addon=false
     I:pyramid_addon_chance=25
     I:pyramid_chevron_upgrade_chance=25
-    B:pyramid_spawn_tokra=true
+    B:pyramid_spawn_tokra=false
     I:pyramid_zpm_chest_chance=15
-    B:swamp_addon=true
+    B:swamp_addon=false
     I:swamp_addon_chance=25
     I:swamp_chevron_upgrade_chance=25
-    B:swamp_spawn_tokra=true
+    B:swamp_spawn_tokra=false
     I:swamp_zpm_chest_chance=15
 }
 
@@ -101,7 +101,7 @@ opencomputers {
 options {
     B:addOresToExistingWorlds=false
     I:chunkLoadingRange=1
-    B:enableNaquadahOre=true
+    B:enableNaquadahOre=false
     B:logStargateEvents=false
 }
 
