OpenBlocks: Disabled Tons of Stuff

--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -16,39 +16,39 @@ blocks {
     B:beartrap=true
     B:big_button=true
     B:big_button_wood=true
-    B:block_breaker=true
-    B:block_placer=true
+    B:block_breaker=false
+    B:block_placer=false
     B:builder_guide=true
-    B:cannon=true
-    B:canvas=true
-    B:canvas_glass=true
-    B:donation_station=true
-    B:drawing_table=true
+    B:cannon=false
+    B:canvas=false
+    B:canvas_glass=false
+    B:donation_station=false
+    B:drawing_table=false
     B:elevator=true
     B:elevator_rotating=true
-    B:fan=true
-    B:flag=true
-    B:golden_egg=true
-    B:grave=true
-    B:guide=true
-    B:heal=true
-    B:imaginary=true
-    B:item_dropper=true
+    B:fan=false
+    B:flag=false
+    B:golden_egg=false
+    B:grave=false
+    B:guide=false
+    B:heal=false
+    B:imaginary=false
+    B:item_dropper=false
     B:ladder=true
-    B:paint_can=true
-    B:paint_mixer=true
+    B:paint_can=false
+    B:paint_mixer=false
     B:path=true
-    B:projector=true
+    B:projector=false
     B:rope_ladder=true
     B:scaffolding=true
-    B:sky=true
-    B:sponge=true
-    B:sprinkler=true
-    B:tank=true
-    B:target=true
+    B:sky=false
+    B:sponge=false
+    B:sprinkler=false
+    B:tank=false
+    B:target=false
     B:trophy=true
     B:vacuum_hopper=true
-    B:village_highlighter=true
+    B:village_highlighter=false
     B:xp_bottler=true
     B:xp_drain=true
     B:xp_shower=true
@@ -308,35 +308,35 @@ itemdropper {
 
 
 items {
-    B:cartographer=true
-    B:crane_backpack=true
-    B:crane_control=true
-    B:crayon_glasses=true
-    B:cursor=true
+    B:cartographer=false
+    B:crane_backpack=false
+    B:crane_control=false
+    B:crayon_glasses=false
+    B:cursor=false
     B:dev_null=true
-    B:empty_map=true
-    B:epic_eraser=true
-    B:generic=true
-    B:generic_unstackable=true
-    B:glyph=true
-    B:golden_eye=true
-    B:hang_glider=true
-    B:height_map=true
-    B:info_book=true
-    B:luggage=true
-    B:paintbrush=true
-    B:pedometer=true
-    B:pencil_glasses=true
-    B:serious_glasses=true
-    B:sleeping_bag=true
-    B:slimalyzer=true
-    B:sonic_glasses=true
-    B:sponge_on_a_stick=true
-    B:squeegee=true
-    B:stencil=true
-    B:tasty_clay=true
-    B:technicolor_glasses=true
-    B:wrench=true
+    B:empty_map=false
+    B:epic_eraser=false
+    B:generic=false
+    B:generic_unstackable=false
+    B:glyph=false
+    B:golden_eye=false
+    B:hang_glider=false
+    B:height_map=false
+    B:info_book=false
+    B:luggage=false
+    B:paintbrush=false
+    B:pedometer=false
+    B:pencil_glasses=false
+    B:serious_glasses=false
+    B:sleeping_bag=false
+    B:slimalyzer=false
+    B:sonic_glasses=false
+    B:sponge_on_a_stick=false
+    B:squeegee=false
+    B:stencil=false
+    B:tasty_clay=false
+    B:technicolor_glasses=false
+    B:wrench=false
     B:xp_bucket=true
 }
 
