--- a/config/unlimitedchiselworks.cfg
+++ b/config/unlimitedchiselworks.cfg
@@ -1,6 +1,88 @@
 # Configuration file
 
 enabled {
+    B:"advancedrocketry:planks"=true
+    B:"appliedenergistics2:quartz_block"=true
+    B:"appliedenergistics2:sky_stone_brick"=true
+    B:"forestry:ash_brick"=true
+    B:"forestry:planks.0"=true
+    B:"forestry:planks.1"=true
+    B:"forestry:planks.fireproof.0"=true
+    B:"forestry:planks.fireproof.1"=true
+    B:"immersiveengineering:treated_wood"=true
+    B:"railcraft:brick_abyssal"=true
+    B:"railcraft:brick_bleachedbone"=true
+    B:"railcraft:brick_bloodstained"=true
+    B:"railcraft:brick_frostbound"=true
+    B:"railcraft:brick_infernal"=true
+    B:"railcraft:brick_nether"=true
+    B:"railcraft:brick_pearlized"=true
+    B:"railcraft:brick_quarried"=true
+    B:"railcraft:brick_red_nether"=true
+    B:"railcraft:brick_red_sandy"=true
+    B:"railcraft:brick_sandy"=true
+    B:"techreborn:rubber_planks"=true
+    B:"tfc:bricks/andesite"=true
+    B:"tfc:bricks/basalt"=true
+    B:"tfc:bricks/chalk"=true
+    B:"tfc:bricks/chert"=true
+    B:"tfc:bricks/claystone"=true
+    B:"tfc:bricks/conglomerate"=true
+    B:"tfc:bricks/dacite"=true
+    B:"tfc:bricks/diorite"=true
+    B:"tfc:bricks/dolomite"=true
+    B:"tfc:bricks/gabbro"=true
+    B:"tfc:bricks/gneiss"=true
+    B:"tfc:bricks/granite"=true
+    B:"tfc:bricks/limestone"=true
+    B:"tfc:bricks/marble"=true
+    B:"tfc:bricks/phyllite"=true
+    B:"tfc:bricks/quartzite"=true
+    B:"tfc:bricks/rhyolite"=true
+    B:"tfc:bricks/rocksalt"=true
+    B:"tfc:bricks/schist"=true
+    B:"tfc:bricks/shale"=true
+    B:"tfc:bricks/slate"=true
+    B:"tfc:cobble/andesite"=true
+    B:"tfc:cobble/basalt"=true
+    B:"tfc:cobble/chalk"=true
+    B:"tfc:cobble/chert"=true
+    B:"tfc:cobble/claystone"=true
+    B:"tfc:cobble/conglomerate"=true
+    B:"tfc:cobble/dacite"=true
+    B:"tfc:cobble/diorite"=true
+    B:"tfc:cobble/dolomite"=true
+    B:"tfc:cobble/gabbro"=true
+    B:"tfc:cobble/gneiss"=true
+    B:"tfc:cobble/granite"=true
+    B:"tfc:cobble/limestone"=true
+    B:"tfc:cobble/marble"=true
+    B:"tfc:cobble/phyllite"=true
+    B:"tfc:cobble/quartzite"=true
+    B:"tfc:cobble/rhyolite"=true
+    B:"tfc:cobble/rocksalt"=true
+    B:"tfc:cobble/schist"=true
+    B:"tfc:cobble/shale"=true
+    B:"tfc:cobble/slate"=true
+    B:"tfc:wood/planks/acacia"=true
+    B:"tfc:wood/planks/ash"=true
+    B:"tfc:wood/planks/aspen"=true
+    B:"tfc:wood/planks/birch"=true
+    B:"tfc:wood/planks/blackwood"=true
+    B:"tfc:wood/planks/chestnut"=true
+    B:"tfc:wood/planks/douglas_fir"=true
+    B:"tfc:wood/planks/hickory"=true
+    B:"tfc:wood/planks/kapok"=true
+    B:"tfc:wood/planks/maple"=true
+    B:"tfc:wood/planks/oak"=true
+    B:"tfc:wood/planks/palm"=true
+    B:"tfc:wood/planks/pine"=true
+    B:"tfc:wood/planks/rosewood"=true
+    B:"tfc:wood/planks/sequoia"=true
+    B:"tfc:wood/planks/spruce"=true
+    B:"tfc:wood/planks/sycamore"=true
+    B:"tfc:wood/planks/white_cedar"=true
+    B:"tfc:wood/planks/willow"=true
 }
 
 
