AE2: Config Updates
- Removed World Gen
- Removed a Lot of Random Items
- Removed Grindstone & Tools.

--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -90,50 +90,50 @@ craftingcpu {
 features {
 
     world {
-        B:CertusOre=true
-        B:CertusQuartzWorldGen=true
-        B:ChargedCertusOre=true
-        B:ChestLoot=true
+        B:CertusOre=false
+        B:CertusQuartzWorldGen=false
+        B:ChargedCertusOre=false
+        B:ChestLoot=false
 
         # Blocks that are not used in any essential recipes, also slabs and stairs.
         B:DecorativeBlocks=true
         B:DecorativeLights=true
-        B:Flour=true
-        B:MeteoriteWorldGen=true
-        B:SkyStoneChests=true
-        B:SpawnPressesInMeteorites=true
-        B:TinyTNT=true
-        B:VillagerTrading=true
+        B:Flour=false
+        B:MeteoriteWorldGen=false
+        B:SkyStoneChests=false
+        B:SpawnPressesInMeteorites=false
+        B:TinyTNT=false
+        B:VillagerTrading=false
     }
 
     machines {
         B:Charger=true
         B:CrystalGrowthAccelerator=true
-        B:GrindStone=true
+        B:GrindStone=false
         B:Inscriber=true
         B:VibrationChamber=true
     }
 
     toolsclassifications {
-        B:CertusQuartzTools=true
-        B:NetherQuartzTools=true
+        B:CertusQuartzTools=false
+        B:NetherQuartzTools=false
         B:PoweredTools=true
     }
 
     tools {
-        B:ChargedStaff=true
+        B:ChargedStaff=false
         B:ColorApplicator=true
-        B:EntropyManipulator=true
-        B:MatterCannon=true
-        B:MeteoriteCompass=true
-        B:PaintBalls=true
-        B:QuartzAxe=true
-        B:QuartzHoe=true
-        B:QuartzKnife=true
-        B:QuartzPickaxe=true
-        B:QuartzSpade=true
-        B:QuartzSword=true
-        B:QuartzWrench=true
+        B:EntropyManipulator=false
+        B:MatterCannon=false
+        B:MeteoriteCompass=false
+        B:PaintBalls=false
+        B:QuartzAxe=false
+        B:QuartzHoe=false
+        B:QuartzKnife=false
+        B:QuartzPickaxe=false
+        B:QuartzSpade=false
+        B:QuartzSword=false
+        B:QuartzWrench=false
         B:WirelessAccessTerminal=true
     }
 
@@ -240,7 +240,7 @@ features {
     }
 
     crafting {
-        B:EnableDisassemblyCrafting=true
+        B:EnableDisassemblyCrafting=false
         B:EnableFacadeCrafting=true
         B:InWorldFluix=true
         B:InWorldPurification=true
