--- a/config/immersiveengineering.cfg
+++ b/config/immersiveengineering.cfg
@@ -29,7 +29,7 @@ general {
     B:enableDebug=false
 
     # Set this to false to remove IE villagers from the game
-    B:enableVillagers=true
+    B:enableVillagers=false
 
     # If this is enabled, wires connected to power sources will cause damage to entities touching them
     # This shouldn't cause significant lag but possibly will. If it does, please report it at https://github.com/BluSunrize/ImmersiveEngineering/issues unless there is a report of it already.
@@ -71,7 +71,7 @@ general {
     B:validateConnections=false
 
     # Set this to false to stop the IE villager house from spawning
-    B:villagerHouse=true
+    B:villagerHouse=false
 
     # The RGB colourate of the wires.
     I:wireColouration <
@@ -519,13 +519,14 @@ general {
         # A blacklist of dimensions in which IE ores won't spawn. By default this is Nether (-1) and End (1)
         I:oreDimBlacklist <
             -1
+            0
             1
          >
 
         # Generation config for Bauxite Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_bauxite <
-            4
+            0
             40
             85
             8
@@ -535,7 +536,7 @@ general {
         # Generation config for Copper Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_copper <
-            8
+            0
             40
             72
             8
@@ -545,7 +546,7 @@ general {
         # Generation config for Lead Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_lead <
-            6
+            0
             8
             36
             4
@@ -555,7 +556,7 @@ general {
         # Generation config for Nickel Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_nickel <
-            6
+            0
             8
             24
             2
@@ -565,7 +566,7 @@ general {
         # Generation config for Silver Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_silver <
-            8
+            0
             8
             40
             4
@@ -575,7 +576,7 @@ general {
         # Generation config for Uranium Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_uranium <
-            4
+            0
             8
             24
             2
