--- a/config/teamreborn/techreborn/compat.cfg
+++ b/config/teamreborn/techreborn/compat.cfg
@@ -2,10 +2,10 @@
 
 appliedenergistics2 {
     # Enable grinder recipes related to Applied Energistics 2 quartz [Default=true]
-    B:EnableQuartzGrinderRecipes=true
+    B:EnableQuartzGrinderRecipes=false
 
     # Enable industrial grinder recipes related to Applied Energistics 2 quartz [Default=true]
-    B:EnableQuartzIndustrialGrinderRecipes=true
+    B:EnableQuartzIndustrialGrinderRecipes=false
 }
 
 
@@ -32,7 +32,7 @@ immersiveengineering {
 
 jei {
     # Show Scrapbox loot in JEI [Default=false]
-    B:ShowScrabpox=false
+    B:ShowScrabpox=true
 }
 
 
