TechReborn: Misoc Config Update
- Disable Gem Tools
- Disable Nuke

--- a/config/teamreborn/techreborn/misc.cfg
+++ b/config/teamreborn/techreborn/misc.cfg
@@ -131,7 +131,7 @@ general {
     B:IC2TransformersStyle=false
 
     # Enable Gem armor and tools [Default=true]
-    B:enableGemTools=true
+    B:enableGemTools=false
 
     # Allow refunding items used to craft the manual [Default=true]
     B:manualRefund=true
@@ -146,13 +146,13 @@ misc {
 
 nuke {
     # Should the nuke explode, set to false to prevent block damage [Default=true]
-    B:enabled=true
+    B:enabled=false
 
     # Nuke fuse time (ticks) [Default=400]
     I:fusetime=400
 
     # Nuke explision radius [Default=40]
-    I:radius=40
+    I:radius=1
 }
 
 
