TechReborn: Recipes Update Config
- Disabled Thermemal Expansion Cell Comp
- Enabled Duplicate IC2 Recipes Removal
- Disabled RC Nuggets

--- a/config/teamreborn/techreborn/recipes.cfg
+++ b/config/teamreborn/techreborn/recipes.cfg
@@ -2,13 +2,13 @@
 
 crafting {
     # Enables the new thermal expansion compatible cell recipe [Default=true]
-    B:cellRecipe=true
+    B:cellRecipe=false
 }
 
 
 ic2 {
     # Changes a lot of recipes and hides blocks to integrate TechReborn into IC2 [Default=false]
-    B:deduplicate=false
+    B:deduplicate=true
 
     # Enter the ic2 profile name here (Experimental or Classic) [Default=Experimental]
     S:ic2_profile=Experimental
@@ -17,7 +17,7 @@ ic2 {
 
 railcraft {
     # When true TechReborn will remove Railcraft's Iron Nugget to steel nugget recipe. [Default=false]
-    B:disableRailcraftNugget=false
+    B:disableRailcraftNugget=true
 }
 
 
