RebornCore: Misc Disabled Season Easter Eggs & Config Updater

--- a/config/teamreborn/reborncore/misc.cfg
+++ b/config/teamreborn/reborncore/misc.cfg
@@ -2,10 +2,10 @@
 
 config {
     # AutoUpdates none user chnaged config values, when the mod default changes. [Default=true]
-    B:"Config Updater"=true
+    B:"Config Updater"=false
 
     # Disable this is you don't want seasonal easter eggs [Default=true]
-    B:"Enable Seasonal Easter Eggs"=true
+    B:"Enable Seasonal Easter Eggs"=false
 
     # Enable version checker [Default=true]
     B:"Version Check"=false
