Oversized: Don't Eject everything just the offending items

--- a/config/oversizediteminstoragearea.cfg
+++ b/config/oversizediteminstoragearea.cfg
@@ -45,7 +45,7 @@ general {
     I:startFire=600
 
     # Should everything be tossed everywhere if a single item is found to be oversized?
-    B:yeetItAll=true
+    B:yeetItAll=false
 }
 
 
