--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 config/JustEnoughCalculation/record.json
 config/codechicken/supporters.json
 config/codechicken/supporters.marker
+config/splash.properties
