BetterFoliage: Config Update (Mod Update)

--- a/config/betterfoliage.cfg
+++ b/config/betterfoliage.cfg
@@ -258,6 +258,12 @@ roundLogs {
 }
 
 
+shaders {
+    I:leavesId=18
+    I:grassId=31
+}
+
+
 shortGrass {
     B:grassEnabled=false
     B:myceliumEnabled=false
