GitIgnore: JECalculation Record File added to ignore / removed config

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ config/codechicken/supporters.marker
 config/splash.properties
 config/AppliedEnergistics2/CustomRecipes.cfg
 config/AppliedEnergistics2/items.csv
+config/JustEnoughCalculation/record.json
