TechReborn: Forestry Comp Removed & Baubles Added

--- a/config/teamreborn/techreborn/compat.cfg
+++ b/config/teamreborn/techreborn/compat.cfg
@@ -10,10 +10,7 @@ appliedenergistics2 {
 
 
 forestry {
-    # Enable distillation tower recipes envolving Forestry fuels [Default=true]
     B:EnableDistillationTowerForestryRecipes=true
-
-    # Allow Forestry fuels to be used in the fuel generators [Default=true]
     B:EnableForestryFuels=true
 }
 
@@ -40,13 +37,14 @@ modules {
     # Should the compat module 'AppliedEnergisticsCompat' be loaded
     B:AppliedEnergisticsCompat=true
 
+    # Should the compat module 'BaublesCompat' be loaded
+    B:BaublesCompat=true
+
     # Should the compat module 'CompatOpenComputers' be loaded
     B:CompatOpenComputers=true
 
     # Should the compat module 'CraftTweakerCompat' be loaded
     B:CraftTweakerCompat=true
-
-    # Should the compat module 'ForestryCompat' be loaded
     B:ForestryCompat=true
 
     # Should the compat module 'IC2ModuleExperimental' be loaded
