OpenBlocks: Scaffolding Disabled

--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -40,7 +40,7 @@ blocks {
     B:path=true
     B:projector=false
     B:rope_ladder=true
-    B:scaffolding=true
+    B:scaffolding=false
     B:sky=false
     B:sponge=false
     B:sprinkler=false
