Chisel: Disabled all Vanilla & Modded Blocks but TFC for now

--- a/config/unlimitedchiselworks.cfg
+++ b/config/unlimitedchiselworks.cfg
@@ -1,27 +1,27 @@
 # Configuration file
 
 enabled {
-    B:"advancedrocketry:planks"=true
-    B:"appliedenergistics2:quartz_block"=true
-    B:"appliedenergistics2:sky_stone_brick"=true
-    B:"forestry:ash_brick"=true
-    B:"forestry:planks.0"=true
-    B:"forestry:planks.1"=true
-    B:"forestry:planks.fireproof.0"=true
-    B:"forestry:planks.fireproof.1"=true
-    B:"immersiveengineering:treated_wood"=true
-    B:"railcraft:brick_abyssal"=true
-    B:"railcraft:brick_bleachedbone"=true
-    B:"railcraft:brick_bloodstained"=true
-    B:"railcraft:brick_frostbound"=true
-    B:"railcraft:brick_infernal"=true
-    B:"railcraft:brick_nether"=true
-    B:"railcraft:brick_pearlized"=true
-    B:"railcraft:brick_quarried"=true
-    B:"railcraft:brick_red_nether"=true
-    B:"railcraft:brick_red_sandy"=true
-    B:"railcraft:brick_sandy"=true
-    B:"techreborn:rubber_planks"=true
+    B:"advancedrocketry:planks"=false
+    B:"appliedenergistics2:quartz_block"=false
+    B:"appliedenergistics2:sky_stone_brick"=false
+    B:"forestry:ash_brick"=false
+    B:"forestry:planks.0"=false
+    B:"forestry:planks.1"=false
+    B:"forestry:planks.fireproof.0"=false
+    B:"forestry:planks.fireproof.1"=false
+    B:"immersiveengineering:treated_wood"=false
+    B:"railcraft:brick_abyssal"=false
+    B:"railcraft:brick_bleachedbone"=false
+    B:"railcraft:brick_bloodstained"=false
+    B:"railcraft:brick_frostbound"=false
+    B:"railcraft:brick_infernal"=false
+    B:"railcraft:brick_nether"=false
+    B:"railcraft:brick_pearlized"=false
+    B:"railcraft:brick_quarried"=false
+    B:"railcraft:brick_red_nether"=false
+    B:"railcraft:brick_red_sandy"=false
+    B:"railcraft:brick_sandy"=false
+    B:"techreborn:rubber_planks"=false
     B:"tfc:bricks/andesite"=true
     B:"tfc:bricks/basalt"=true
     B:"tfc:bricks/chalk"=true
