--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -49,87 +49,87 @@ client {
 
 
 features {
-    B:aluminum=true
-    B:andesite=true
-    B:antiblock=true
-    B:arcaneStone=true
-    B:autochisel=true
-    B:basalt=true
-    B:bloodMagic=true
-    B:bookshelf=true
-    B:bricks=true
-    B:bronze=true
-    B:brownstone=true
-    B:carpet=true
-    B:certus=true
-    B:charcoal=true
-    B:chisel=true
-    B:cloud=true
-    B:coal=true
-    B:coalCoke=true
-    B:cobalt=true
-    B:cobblestone=true
-    B:cobblestonemossy=true
-    B:concrete=true
-    B:copper=true
-    B:diamond=true
-    B:diorite=true
-    B:dirt=true
-    B:electrum=true
-    B:emerald=true
-    B:endPurpur=true
-    B:endstone=true
-    B:factory=true
-    B:futura=true
-    B:glass=true
-    B:glassdyed=true
-    B:glowstone=true
-    B:gold=true
-    B:granite=true
-    B:hardenedClay=true
-    B:ice=true
-    B:invar=true
-    B:iron=true
-    B:ironpane=true
-    B:laboratory=true
-    B:lapis=true
-    B:lavastone=true
-    B:lead=true
-    B:limestone=true
-    B:marble=true
-    B:marblepillar=true
-    B:netherbrick=true
-    B:netherrack=true
-    B:nickel=true
-    B:obsidian=true
-    B:paper=true
-    B:planks=true
-    B:platinum=true
-    B:prismarine=true
-    B:quartz=true
-    B:redstone=true
-    B:sandstone=true
-    B:sandstoneRed=true
-    B:sandstoneScribbles=true
-    B:sandstoneredScribbles=true
-    B:silver=true
-    B:steel=true
-    B:stonebrick=true
-    B:technical=true
-    B:temple=true
-    B:tin=true
-    B:tyrian=true
-    B:uranium=true
-    B:valentines=true
-    B:voidstone=true
-    B:waterstone=true
-    B:wool=true
+    B:aluminum=false
+    B:andesite=false
+    B:antiblock=false
+    B:arcaneStone=false
+    B:autochisel=false
+    B:basalt=false
+    B:bloodMagic=false
+    B:bookshelf=false
+    B:bricks=false
+    B:bronze=false
+    B:brownstone=false
+    B:carpet=false
+    B:certus=false
+    B:charcoal=false
+    B:chisel=false
+    B:cloud=false
+    B:coal=false
+    B:coalCoke=false
+    B:cobalt=false
+    B:cobblestone=false
+    B:cobblestonemossy=false
+    B:concrete=false
+    B:copper=false
+    B:diamond=false
+    B:diorite=false
+    B:dirt=false
+    B:electrum=false
+    B:emerald=false
+    B:endPurpur=false
+    B:endstone=false
+    B:factory=false
+    B:futura=false
+    B:glass=false
+    B:glassdyed=false
+    B:glowstone=false
+    B:gold=false
+    B:granite=false
+    B:hardenedClay=false
+    B:ice=false
+    B:invar=false
+    B:iron=false
+    B:ironpane=false
+    B:laboratory=false
+    B:lapis=false
+    B:lavastone=false
+    B:lead=false
+    B:limestone=false
+    B:marble=false
+    B:marblepillar=false
+    B:netherbrick=false
+    B:netherrack=false
+    B:nickel=false
+    B:obsidian=false
+    B:paper=false
+    B:planks=false
+    B:platinum=false
+    B:prismarine=false
+    B:quartz=false
+    B:redstone=false
+    B:sandstone=false
+    B:sandstoneRed=false
+    B:sandstoneScribbles=false
+    B:sandstoneredScribbles=false
+    B:silver=false
+    B:steel=false
+    B:stonebrick=false
+    B:technical=false
+    B:temple=false
+    B:tin=false
+    B:tyrian=false
+    B:uranium=false
+    B:valentines=false
+    B:voidstone=false
+    B:waterstone=false
+    B:wool=false
 }
 
 
 general {
     # If true, you can chisel stone brick to mossy stone brick.
-    B:allowBrickToMossyInChisel=true
+    B:allowBrickToMossyInChisel=false
     I:amountYouGetFromFactoryBlockCrafting=32
 
     # Use alternative crafting recipe for the chisel
@@ -139,7 +139,7 @@ general {
     B:chiselBackToVanillaLeaves=false
 
     # Allow stone to be chiseled to/from stone bricks.
-    B:chiselStoneToStoneBricks=true
+    B:chiselStoneToStoneBricks=false
 
     # The factor that concrete_white increases your velocity. Default is 1.35, set to 1 for no change.
     D:concreteVelocityMult=1.35
