Chise: Fixed it up and enabled some blocks

--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -57,7 +57,7 @@ features {
     B:basalt=false
     B:bloodMagic=false
     B:bookshelf=false
-    B:bricks=false
+    B:bricks=true
     B:bronze=false
     B:brownstone=false
     B:carpet=false
@@ -68,7 +68,7 @@ features {
     B:coal=false
     B:coalCoke=false
     B:cobalt=false
-    B:cobblestone=false
+    B:cobblestone=true
     B:cobblestonemossy=false
     B:concrete=false
     B:copper=false
@@ -81,7 +81,7 @@ features {
     B:endstone=false
     B:factory=false
     B:futura=false
-    B:glass=false
+    B:glass=true
     B:glassdyed=false
     B:glowstone=false
     B:gold=false
@@ -103,7 +103,7 @@ features {
     B:nickel=false
     B:obsidian=false
     B:paper=false
-    B:planks=false
+    B:planks=true
     B:platinum=false
     B:prismarine=false
     B:quartz=false
