Oversized: Fixed /inv view

--- a/config/oversizediteminstoragearea.cfg
+++ b/config/oversizediteminstoragearea.cfg
@@ -37,6 +37,7 @@ general {
         net.minecraft.entity.player.InventoryPlayer
         net.minecraft.inventory.InventoryCrafting
         net.minecraft.inventory.InventoryCraftResult
+        com.feed_the_beast.ftbutilities.command.InvSeeInventory
      >
 
     # Temperature that flammable inventories will combust.
