--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ config/splash.properties
 config/AppliedEnergistics2/CustomRecipes.cfg
 config/AppliedEnergistics2/items.csv
 config/JustEnoughCalculation/record.json
+config/chiselsandbits_clipboard.cfg
