--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -79,14 +79,14 @@ armor {
 
     # Will these materials be registered as armor materials for Construct's Armory? Order: boron, tough alloy, hard carbon, boron nitride, thorium, uranium, magnesium, chocolate.
     B:armor_conarm_register <
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
      >
 }
 
@@ -112,7 +112,7 @@ entities {
 
     # Will these entities be registered to spawn? Order: feral ghoul.
     B:entity_register <
-        true
+        false
      >
 }
 
@@ -833,14 +833,14 @@ ores {
 
     # Will ores generate in the world? Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
     B:ore_gen <
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
      >
 
     # Numbers of ore blocks per ore chunk. Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
@@ -903,7 +903,7 @@ ores {
      >
 
     # Remove disabled ores from the Ore Dictionary and JEI?
-    B:hide_disabled_ores=false
+    B:hide_disabled_ores=true
 
     # Pickaxe harvest levels of ores. Order: copper, tin, lead, thorium, uranium, boron, lithium, magnesium.
     I:ore_harvest_levels <
@@ -925,50 +925,50 @@ other {
 
     # Register processors to the game? Order: Nuclear Furnace, Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor, Centrifuge, Rock Crusher.
     B:register_processor <
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
      >
 
     # Register passive machine to the game? Order: Helium Collector, Cobblestone Generator, Infinite Water Source, Nitrogen Collector.
     B:register_passive <
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
      >
 
     # Register tool types to the game? Order: boron, tough alloy, hard carbon, boron nitride.
     B:register_tool <
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
      >
 
     # Register armor types to the game? Order: boron, tough alloy, hard carbon, boron nitride.
     B:register_armor <
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
      >
 
     # Hold down the control key rather than the shift key to show extra tooltip info?
@@ -981,16 +981,16 @@ other {
     B:rare_drops=false
 
     # Will NuclearCraft loot generate in chests?
-    B:dungeon_loot=true
+    B:dungeon_loot=false
 
     # Will the Wasteland Biome generate in the Overworld?
-    B:wasteland_biome=true
+    B:wasteland_biome=false
 
     # The weight assigned to the generation of the Wasteland Biomes - higher numbers correspond to higher generation rates.
     I:wasteland_biome_weight=5
 
     # Will the Wasteland Dimension be generated?
-    B:wasteland_dimension_gen=true
+    B:wasteland_dimension_gen=false
 
     # Set the dimension ID for the Wasteland Dimension.
     I:wasteland_dimension=4598
@@ -999,7 +999,7 @@ other {
     I:mushroom_spread_rate=16
 
     # Will glowing mushrooms generate in the nether?
-    B:mushroom_gen=true
+    B:mushroom_gen=false
 
     # Determines how many glowing mushrooms will spawn at a time.
     I:mushroom_gen_size=64
@@ -1014,13 +1014,13 @@ other {
     B:register_cofh_fluids=false
 
     # Register NC raw material EMC values if ProjectE is installed?
-    B:register_projecte_emc=true
+    B:register_projecte_emc=false
 
     # Will Ore Dictionary inputs be used for 'ingot <-> block' crafting and 'dust -> ingot' furnace recipes? If false, the NC ingredient will be used.
     B:ore_dict_raw_material_recipes=false
 
     # Will Ore Dictionary outputs be prioritised according to the mod list below? If false, the default Ore Dict entry will be used when deciding machine outputs.
-    B:ore_dict_priority_bool=true
+    B:ore_dict_priority_bool=false
 
     # Determines the priority of each mod's ore dictionary entries - earlier mods' IDs in this list have a higher priority. This is used to determine which mod's corresponding item is produced in machine recipes. If no matching mod is found, the default entry is used.
     S:ore_dict_priority <
@@ -1114,10 +1114,10 @@ processors {
     I:rf_per_eu=16
 
     # If true, energy from GTCE can be accepted and emitted by NC machines.
-    B:enable_gtce_eu=true
+    B:enable_gtce_eu=false
 
     # If true, gas from Mekanism can be handled by NC machines.
-    B:enable_mek_gas=true
+    B:enable_mek_gas=false
 
     # Ticks per machine update - used for various processes such as GUI updates and multiblock structure checks.
     I:machine_update_rate=20
@@ -1137,7 +1137,7 @@ processors {
     I:cobble_gen_power=0
 
     # Can NuclearCraft machines process ores?
-    B:ore_processing=true
+    B:ore_processing=false
 
     # Specify the size of the output stack for Manufactory wood processing recipes. Order: Logs->Planks, Planks->Sticks.
     I:manufactory_wood <
@@ -1150,25 +1150,25 @@ processors {
 
     # If enabled, recipes of the corresponding NC machine will also be added for GTCE machines. Order: Manufactory, Isotope Separator, Decay Hastener, Fuel Reprocessor, Alloy Furnace, Fluid Infuser, Melter, Supercooler, Electrolyzer, Neutron Irradiator, Ingot Former, Pressurizer, Chemical Reactor, Salt Mixer, Crystallizer, Fluid Enricher, Fluid Extractor, Centrifuge, Rock Crusher.
     B:gtce_recipe_integration <
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
-        true
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
+        false
      >
 
     # Will GTCE recipe additions be logged?
@@ -1398,7 +1398,7 @@ radiation {
     D:radiation_geiger_block_redstone=3.0
 
     # If enabled, radiation shielding attachment recipes will be added for all registered armor pieces.
-    B:radiation_shielding_default_recipes=true
+    B:radiation_shielding_default_recipes=false
 
     # List of armor item stacks for which shielding recipes will not be added by default. Format: 'modid:armorName:meta'.
     S:radiation_shielding_item_blacklist <
